--- a/experiment_table.html
+++ b/experiment_table.html
@@ -2,12 +2,12 @@
 layout: default
 title: "Experiment table"
 permalink: /experiment_table/
-#page_css:
-#	- https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css
-#page_js:
-#        - https://code.jquery.com/jquery-3.5.1.js
-#	- https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js
-#- https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap5.min.js
+page_css:
+	- https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css
+page_js:
+  - https://code.jquery.com/jquery-3.5.1.js
+	- https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js
+  - https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap5.min.js
 ---
 
 
