--- a/experiments_table.html
+++ b/experiments_table.html
@@ -1,7 +1,8 @@
 ---
-layout: default
-title: "Experiment table"
-permalink: /experiment_table/
+layout: single
+classes: wide
+title: "Experiments table"
+permalink: /experiments_table/
 page_css:
 	- https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css
 page_js:
