--- a/experiments_table.html
+++ b/experiments_table.html
@@ -3,6 +3,8 @@ layout: single
 classes: wide
 title: "Experiments table"
 permalink: /experiments_table/
+page_css:
+  - https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css
 page_js:
   - https://code.jquery.com/jquery-3.5.1.js
   - https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js
