--- a/experiments_table.html
+++ b/experiments_table.html
@@ -19,9 +19,9 @@ page_js:
     </tr>
     {% endif %}
 
-    {% tablerow pair in row %}
-      {{ pair[1] }}
-    {% endtablerow %}
+    {% for pair in row %}
+       <td>{{ pair[1] }}</td>
+    {% endfor %}
   {% endfor %}
 </table>
 
