--- a/experiments_table.html
+++ b/experiments_table.html
@@ -5,8 +5,8 @@ title: "Experiments table"
 permalink: /experiments_table/
 page_css:
   - https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css
-page_js:
-  - https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js
+#page_js:
+#  - https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js
 ---
 
 <table class="display" id="my-table">
