--- a/experiments_table.html
+++ b/experiments_table.html
@@ -27,6 +27,6 @@ page_css:
 
 <script>
 $(document).ready(function () {
-$("#my-table > table").DataTable();
+$("#my-table").DataTable();
 });
 </script>
