--- a/experiments_table.html
+++ b/experiments_table.html
@@ -11,22 +11,16 @@ page_js:
 
 <table class="display" id="my-table">
   {% for row in site.data.experiment_table %}
-    {% if forloop.first %}
     <tr>
+    {% if forloop.first %}
       {% for pair in row %}
         <th>{{ pair[0] }}</th>
       {% endfor %}
-    </tr>
     {% endif %}
 
-    {% tablerow pair in row %}
-      {{ pair[1] }}
-    {% endtablerow %}
+    {% for pair in row %}
+       <td>{{ pair[1] }}</td>
+    {% endfor %}
+    </tr>
   {% endfor %}
 </table>
-
-<script>
-$(document).ready(function () {
-$("#my-table > table").DataTable();
-});
-</script>
