--- a/experiments_table.html
+++ b/experiments_table.html
@@ -11,12 +11,15 @@ page_css:
 
 <table class="display" id="my-table">
   {% for row in site.data.experiment_table %}
+  <thead>
   <tr>
     {% if forloop.first %}
       {% for pair in row %}
         <th>{{ pair[0] }}</th>
       {% endfor %}
   </tr>
+  </thead>
+  <tbody>
   <tr>
     {% endif %}
 
@@ -25,4 +28,5 @@ page_css:
     {% endfor %}
   </tr>
   {% endfor %}
+  </tbody>
 </table>
