assets on Github are a bit different

--- a/experiments_table.html
+++ b/experiments_table.html
@@ -5,7 +5,7 @@ title: "Experiments table"
 permalink: /experiments_table/
 page_css:
   - https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css
-  - /assets/css/dataTables.css
+  - /RNABSdb/assets/css/dataTables.css
 #page_js:
 #  - https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js
 ---
