--- a/experiments_table.html
+++ b/experiments_table.html
@@ -6,6 +6,7 @@ permalink: /experiments_table/
 page_css:
   - https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css
   - /RNABSdb/assets/css/dataTables.css
+  - https://cdn.datatables.net/buttons/2.2.3/css/buttons.dataTables.min.css
 #page_js:
 #  - https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js
 ---
@@ -32,7 +33,11 @@ page_css:
     {% endif %}
 
     {% for pair in row %}
+    	{% if pair[0] == "Available_peaks_file" and pair[1] and pair[1]!="no" %}
+			<td><a href="{{ pair[1] }}">download</a></td>
+	{% else %}
        			<td>{{ pair[1] }}</td>
+	{% endif %}
     {% endfor %}
 		</tr>
   {% endfor %}
