--- a/ucsc_links.html
+++ b/ucsc_links.html
@@ -11,9 +11,11 @@ permalink: /ucsc_links/
 ##  - https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js
 ---
 
-<a href="https://genome.ucsc.edu/cgi-bin/hgTracks?hubUrl=https://olilab.unito.it/RNABSdb/hub.txt&genome=hg38&position=lastDbPos" target="_blank">all human tracks</a>
-<br>
-<a href=https://genome.ucsc.edu/cgi-bin/hgTracks?hubUrl=https://olilab.unito.it/RNABSdb/hub.txt&genome=mm10&position=lastDbPos" target="_blank">all mouse tracks</a>
+<center>
+	
+<a class="btn btn--primary" href="https://genome.ucsc.edu/cgi-bin/hgTracks?hubUrl=https://olilab.unito.it/RNABSdb/hub.txt&genome=hg38&position=lastDbPos" target="_blank">all human tracks</a>
+
+<a class="btn btn--primary" href=https://genome.ucsc.edu/cgi-bin/hgTracks?hubUrl=https://olilab.unito.it/RNABSdb/hub.txt&genome=mm10&position=lastDbPos" target="_blank">all mouse tracks</a>
 
 <table class="display" id="ucsc_link">
 	<thead>
@@ -31,4 +33,5 @@ permalink: /ucsc_links/
   		{% endfor %}
 	</tbody>
 </table>
-</div>
+								 
+</center>
