--- a/ucsc_links.html
+++ b/ucsc_links.html
@@ -17,7 +17,7 @@ permalink: /ucsc_links/
 
 <a class="btn btn--primary" href=https://genome.ucsc.edu/cgi-bin/hgTracks?hubUrl=https://olilab.unito.it/RNABSdb/hub.txt&genome=mm10&position=lastDbPos" target="_blank">all mouse tracks</a>
 
-<table class="display" id="ucsc_link">
+<table>
 	<thead>
 		<tr>
       			<th>Species</th>
