--- a/ucsc_links.html
+++ b/ucsc_links.html
@@ -1,6 +1,6 @@
 ---
-layout: default
-classes: wide
+layout: post
+#classes: wide
 title: "Link to UCSC genome browser"
 permalink: /ucsc_links/
 #page_css:
