--- a/experiments_table.html
+++ b/experiments_table.html
@@ -12,7 +12,7 @@ page_css:
 ---
 
 <center>
-<a href="https://docs.google.com/spreadsheets/d/1NiJ1RpaMREOiI6QEBu7h4LA5wmEMZvE2v57XM5ukhg4/edit?usp=sharing">
+<a href="https://olilab.unito.it/RNABSdb/data/RNABSdb_experiment_table_v1.xlsx">
 	<button type="button" class="btn btn--primary">Download the table in xlsx</button>
 </a>
 </center>
